fix creazione Router